--- a/src/main/resources/templates/Autor-Form.html
+++ b/src/main/resources/templates/Autor-Form.html
@@ -15,11 +15,16 @@
     <div class="container">
         <form action="/autor/registro" method="post">
 
-            <label class="mb-3">Cargar autor</label>
-            
-            <div class="form-control">
-                <input type="text" class="form-control my-1" name="nombre" placeholder="nombre del autor">
+            <div class="d-grid gap-3 col-6 mx-auto"></div>
+            <div class="text-center">
+                <label class="mb-3 fs-5 fw-bold">Cargar autor</label>
             </div>
+            
+            </div>
+             <div class="d-grid gap-2 col-6 mx-auto mb-3 ">
+                <input type="text" class="form-control" name="nombre" placeholder="nombre del autor">
+            </div>
+
 
             <div th:if="${error != null}" class="card text-white bg-danger mb-2 mensajeError">
                 <div class="card-body">
@@ -35,7 +40,12 @@
                 </div>
             </div>
 
-            <button type="submit" class="btn btn-primary" ><i class="bi bi-database-add"> Subir</i></button>
+            <div class="d-grid gap-2 col-4 mx-auto">
+                <button class="btn btn-primary" type="submit"><i class="bi bi-database-add"> Subir</i></button>
+                <a href="/" class="btn btn-primary btn-icon" role="button">
+                    <span><i class="bi bi-backspace-fill"></i></span> Volver
+                  </a>
+            </div>
 
 
         </form>
