--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,24 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <title>pagina principal</title>
-</head>
-<body>
-    <div class="container">
-        <div>
-            <h1>Server Online by Lexxe</h1>
-        </div>
-        <div>
-            <a href="/info"><button type="button" class="btn btn-primary">Ver info</button></a>
-        </div>
+<html lang="en" xmlns:th = "http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+              integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+  <title>pagina principal</title>
+</head>
+
+<body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+          integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  
+
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-md navbar-light bg-light border-3 border-bottom border-primary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Menu</a>
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#MenuNavegacion">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="MenuNavegacion" class="collapse navbar-collapse">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="libroDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Libro</a>
+              <ul class="dropdown-menu" aria-labelledby="libroDropdown">
+                <li><a href="/libro/registrar" class="dropdown-item">Cargar libro</a></li>
+                <li><a href="#" class="dropdown-item">Listar</a></li>
+                <li><a href="#" class="dropdown-item">Eliminar</a></li>
+
+              </ul>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="#">Editorial</a>
+            </li>
+            
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="autorDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Autor</a>
+              <ul class="dropdown-menu" aria-labelledby="autorDropdown">
+                <li><a href="/autor/registrar" class="dropdown-item">Cargar autor</a></li>
+                <li><a href="/autor/lista" class="dropdown-item">Mostrar</a></li>
+                <li><a href="#" class="dropdown-item">Eliminar</a></li>
+              </ul>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
+    <div>
+      <a href="/"><button type="button" class="btn btn-primary">Ver info</button></a>
     </div>
-    
-    
+  </div>
+  
+
 </body>
+
 </html>
