--- a/src/main/resources/templates/libro_form.html
+++ b/src/main/resources/templates/libro_form.html
@@ -3,39 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">      
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">      
 <title>Formulario Libro</title>
 <script type="text/javascript"></script>
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
     
-    <div class="container">
-         <div class="container-fluid m-5 contededor">
+         <div class="container m-6 contededor" style="background-color: azure;">
             <form  action="/libro/registro" method="post">
-                <label class="mb-3">Cargar Libro</label>
-                <div class="form-group my-3">
-                    <input type="number" class="form-control" name="isbn" placeholder="isbn">
-                </div>
 
-                <div class="form-group my-3">
-                    <input type="text" class="form-control" name="titulo" placeholder="nombre libro">
-                </div>
-
-                <div class="form-group my-3">
-                    <input type="number" class="form-control" name="ejemplares" placeholder="ejemplares">
-                </div>
-
-                <div class="form-group my-3">
-                    <input type="text" class="form-control" name="idAutor" placeholder="Autor">
-                </div>
-
-                <div class="form-group my-3">
-                    <input type="text" class="form-control" name="idEditorial" placeholder="Editorial">
-                </div>
-
-               <div th:if="${error != null}" class="card text-white bg-danger mb-2 mensajeError">
+                <div th:if="${error != null}" class="card text-white bg-danger mb-2 mensajeError">
                     <div class="card-body">
                         <h5 class="card-title"><i class="bi bi-bug"> Error!</i></h5>
                         <p class="card-text" th:text="${error}"></p>
@@ -49,11 +31,49 @@
                     </div>
                 </div>
 
-                <button type="submit" class="btn btn-primary"><i class="bi bi-database-add"> Subir</i></button>
+                <label class="mb-3">Cargar Libro</label>
+                <div class="form-group col-8 my-3">
+                    <input type="number" class="form-control" name="isbn" placeholder="isbn">
+                </div>
+
+                <div class="form-group col-8 my-3">
+                    <input type="text" class="form-control" name="titulo" placeholder="nombre libro">
+                </div>
+
+                <div class="form-group col-8 my-3">
+                    <input type="number" class="form-control" name="ejemplares" placeholder="ejemplares">
+                </div>
+                
+                <div class="form-group col-3 my-3">
+                    <select class="form-select form-select-sm mb-4" name="idAutor">
+                        <option>Seleccionar Autor</option>
+                        <option th:each="autor : ${autores}" 
+                                th:value="${autor.idAutor}"
+                                th:text="${autor.nombre}">
+                    </select>
+                </div>
+
+                <div class="form-group col-3 my-3">
+                    <select class="form-select form-select-sm mb-4" name="idEditorial">
+                        <option>Seleccionar Editorial</option>
+                        <option th:each="editorial : ${editoriales}" 
+                                th:value="${editorial.idEditorial}"
+                                th:text="${editorial.nombre}">
+                    </select>
+                </div>
+               
+                
+                <div class="d-grid gap-2 col-6 mx-auto">
+                    <button class="btn btn-primary" type="submit"><i class="bi bi-database-add"> Subir</i></button>
+                    <a href="/" class="btn btn-primary btn-icon" role="button">
+                        <span><i class="bi bi-backspace-fill"></i></span> Volver
+                      </a>
+                </div>
+               
                 
             </form>
         </div>
-    </div>
+    
         
 </body>
 </html>
