--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,9 +29,8 @@
               <a class="nav-link dropdown-toggle" href="#" id="libroDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Libro</a>
               <ul class="dropdown-menu" aria-labelledby="libroDropdown">
                 <li><a href="/libro/registrar" class="dropdown-item">Cargar libro</a></li>
-                <li><a href="#" class="dropdown-item">Listar</a></li>
+                <li><a href="/libro/lista" class="dropdown-item">Listar</a></li>
                 <li><a href="#" class="dropdown-item">Eliminar</a></li>
-
               </ul>
             </li>
 
