--- a/src/main/resources/templates/autor_lista.html
+++ b/src/main/resources/templates/autor_lista.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th = "http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-<script type="text/javascript"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    
+          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">      
+    <title>Formulario Autor</title>
+
+    <script type="text/javascript"></script>
 </head>
 <body>
-
+    <div class="container">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Id del Autor</th>
+                    <th scope="col">Nombre del Autor</th>
+                    <th scope="col">Acciones</th>
+                </tr>
+            </thead>
+            <tbody th:each="autor : ${autores}">
+                <th scope="row" th:text="${autor.idAutor}"></th>
+                <td th:text="${autor.nombre}"></td>
+                <td><a class="text-decoration-none" th:href="@{/autor/modificar/__${autor.idAutor}__}"><i class="bi bi-brush-fill">Modificar</i></a></td>
+            </tbody>
+        </table>
+    </div>
+    <div class="d-grid gap-2 col-4 mx-auto">
+        <a href="/" class="btn btn-primary btn-icon" role="button">
+            <span><i class="bi bi-backspace-fill"></i></span> Volver
+        </a>
+    </div>
 </body>
 </html>
